--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <title>Welcome</title>
-    <link rel="stylesheet" href="./app.css" />
+    <link rel="stylesheet" href="/app.css" />
 </head>
 
 <body>
@@ -14,7 +14,7 @@
         <strong>You need to have JavaScript enabled.</strong>
     </noscript>
     <div id="app"></div>
-    <script src="./app.js"></script>
+    <script src="/app.js"></script>
     <!-- <script src="http://localhost:8080/bundle.js"></script> -->
 </body>
 
